deployments/pathweb/jellyfin/statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: jellyfin
  namespace: media-services
spec:
  serviceName: jellyfin-headless
  replicas: 0
  selector:
    matchLabels:
      app.kubernetes.io/name: jellyfin
  template:
    metadata:
      labels:
        app.kubernetes.io/name: jellyfin
    spec:
      nodeSelector:
        node-group: baldric
      priorityClassName: rfhome-high-priority
      containers:
      - name: server
        image: jellyfin/jellyfin:latest
        ports:
        - containerPort: 8096
          name: http
        - containerPort: 8920
          name: https
        volumeMounts:
        - name: media
          mountPath: /media
        - name: config
          mountPath: /config
        - name: cache
          mountPath: /cache
        - name: tls-cert
          mountPath: /certs
          readOnly: true
          # resources:
      #requests:
      #cpu: "4"
      #memory: 1Gi
      # limits:
      # cpu: "4"
      # memory: 2Gi
      volumes:
      - name: media
        persistentVolumeClaim:
          claimName: okinawa-media-smb
      - name: config
        persistentVolumeClaim:
          claimName: jellyfin-config
      - name: cache
        persistentVolumeClaim:
          claimName: jellyfin-cache
      - name: tls-cert
        secret:
          secretName: services-wildcard-cert
