deployments/pathweb/jellyfin/ciliumnetworkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: jellyfin-network-policy
  namespace: media-services
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: jellyfin
  ingress:
    - fromCIDRSet:
        - cidr: 10.229.2.0/24
    - fromCIDRSet:
        - cidr: fd96:619:2::/64
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: node-local-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toCIDRSet:
        - cidr: ::/0
          except:
            - fc00::/7
    - toCIDRSet:
        - cidr: 0.0.0.0/0
          except:
            - 10.0.0.0/8
            - 192.168.0.0/16
            - 172.16.0.0/12
